# jacquelynql

./: '  .gitignore  README.markdown
daemon/: .example.env  Cargo.toml  match_report.json  match_started.json  player_death.json  player_kill.json  player_medal.json  player_stats.json  round_over.json  test
daemon/src/: main.rs  rcon.rs  redis_connection.rs  zmq_connection.rs
daemon/src/stats/: events.rs  mod.rs  models.rs  parser.rs  zmq.rs
server/: .gitignore  Gemfile  README.md  match_data.json  match_report.json  player_death.json  player_kill.json  player_stats.json
server/app/controllers/api/: matches_controller.rb  players_controller.rb
server/app/models/: match.rb  matches_player.rb  player.rb
server/app/serializers/: match_serializer.rb  player_serializer.rb
server/app/views/application/: index.html.erb
server/config/: application.rb  database.yml  newrelic.yml  routes.rb
server/config/initializers/: assets.rb  lograge.rb  mime_types.rb
server/config/locales/: en.yml
server/db/: schema.rb
server/db/migrate/: 20160513101120_create_players.rb  20160513101443_create_matches.rb  20160513101538_add_matches_to_players.rb  20160513102321_create_join_table_matches_players.rb  20160513102424_drop_references_from_players_and_matches.rb  20160513104847_rename_matches_factory_to_game_type.rb
server/frontend/: bower.json  ember-cli-build.js  package.json
server/frontend/app/: router.js
server/spec/: factories.rb
server/spec/controllers/: matches_controller_spec.rb
server/spec/models/: match_spec.rb  matches_player_spec.rb  player_spec.rb
(+10 files in other folders)
