[package]
name = "daemon"
version = "0.1.0"
authors = ["josh@joshuabell.io"]

[profile.release]
lto = true

[dependencies]
quickcheck = "*"
serde = "*"
serde_json = "*"
serde_macros = "*"
rustc-serialize = "*"
clippy = "*"
uuid = "0.1"
diesel = "0.5.0"
diesel_codegen = { version = "0.5.0", default-features = false, features = ["nightly", "postgres"] }
dotenv = "0.8.0"
dotenv_macros = "0.8.0"
zmq = { git = "https://github.com/erickt/rust-zmq.git" }
