[package]
name = "daemon"
version = "0.1.0"
authors = ["josh@joshuabell.io"]

[dependencies]
quickcheck = "*"
stainless = "*"
serde = "*"
serde_json = "*"
serde_macros = "*"
rustc-serialize = "*"
redis = "0.5.2"
uuid = "0.1"
dotenv = "0.8.0"
dotenv_macros = "0.8.0"
bincode = "*"
chrono = "*"
regex = "0.1"
zmq = { git = "https://github.com/erickt/rust-zmq.git" }
